tests/snapshots/snapshots__pipeline@final_ctl_resume.pr.snap
---
source: tests/snapshots.rs
expression: "normalize_pipeline_report(&prism::report(&src))"
input_file: tests/cases/final_ctl_resume.pr
---
== tokens ==
VOpen Effect UIdent("Abort") VOpen Ident("abort") LParen KwInt RParen Colon KwInt VClose VSemi Fn Ident("main") LParen RParen Eq VOpen Let Ident("v") Eq VOpen Handle Ident("abort") LParen Int(IntLit { value: 7, suffix: None }) RParen With VOpen Ident("never") Ident("abort") LParen Ident("code") RParen FatArrow Ident("resume") LParen Ident("code") RParen VSemi Return Ident("r") FatArrow Ident("r") VClose VClose VSemi Ident("println") LParen Ident("v") RParen VClose VClose

== ast ==
Program {
    types: [],
    effects: [
        EffectDecl {
            name: "Abort",
            params: [],
            ops: [
                EffOp {
                    name: "abort",
                    params: [
                        Int,
                    ],
                    ret: Int,
                    grade: Many,
                },
            ],
            span: 126..157,
        },
    ],
    errors: [],
    aliases: [],
    classes: [],
    instances: [],
    fns: [
        Decl {
            name: "main",
            params: [],
            ret: None,
            eff: None,
            constraints: [],
            body: Spanned {
                node: Let(
                    "v",
                    Spanned {
                        node: Handle(
                            Spanned {
                                node: Call(
                                    Spanned {
                                        node: Var(
                                            "abort",
                                        ),
                                        span: 192..197,
                                    },
                                    [
                                        Spanned {
                                            node: Int(
                                                IntLit {
                                                    value: 7,
                                                    suffix: None,
                                                },
                                            ),
                                            span: 198..199,
                                        },
                                    ],
                                ),
                                span: 192..200,
                            },
                            [
                                Sugar(
                                    Never(
                                        "abort",
                                        [
                                            "code",
                                        ],
                                        Spanned {
                                            node: Call(
                                                Spanned {
                                                    node: Var(
                                                        "resume",
                                                    ),
                                                    span: 233..239,
                                                },
                                                [
                                                    Spanned {
                                                        node: Var(
                                                            "code",
                                                        ),
                                                        span: 240..244,
                                                    },
                                                ],
                                            ),
                                            span: 233..245,
                                        },
                                    ),
                                ),
                                Return(
                                    "r",
                                    Spanned {
                                        node: Var(
                                            "r",
                                        ),
                                        span: 264..265,
                                    },
                                ),
                            ],
                        ),
                        span: 185..265,
                    },
                    Spanned {
                        node: Call(
                            Spanned {
                                node: Var(
                                    "println",
                                ),
                                span: 268..275,
                            },
                            [
                                Spanned {
                                    node: Var(
                                        "v",
                                    ),
                                    span: 276..277,
                                },
                            ],
                        ),
                        span: 268..278,
                    },
                ),
                span: 173..278,
            },
            wheres: [],
            span: 159..278,
        },
    ],
}

== types ==
[E6030] Type Error: never clause cannot resume
    ╭─[ <source>:10:28 ]
    │
 10 │       never abort(code) => resume(code)
    │                            ───┬──  
    │                               ╰──── never clause cannot resume
────╯
